--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
     <div class="flex_container visible" id="fgmenu">
         <div class="visible"></div>
         <form id="menu" class="visible">
-            <label for="menu_text">Link to thread:</label><br>
-            <input type="text" id="menu_text" value="https://boards.4chan.org/h/thread/6662104" ><br>
-            <label for="menu_length"> Maximum time per image in seconds:</label><br>
-            <input type="text" id="menu_length" value="20" ><br>             
-            <input type="button" id="menu_submit" value="Start">
+            <table>
+                <tr>
+                    <label for="menu_text">Link to thread:</label>
+                    <input type="text" id="menu_text" value="https://boards.4chan.org/h/thread/6662104" >
+                </tr>
+                <tr>
+                    <label for="menu_length"> Maximum time per image in seconds:</label><br>
+                    <input type="text" id="menu_length" value="20" ><br>
+                </tr>
+                <tr>
+                    <input type="button" id="menu_submit" value="Start">
+                </tr>
+            </table>
         </form>
         <div class="visible"></div>
     </div>  
