--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <div class="visible"></div>
         <form id="menu" class="visible">
             <table>
-                <tr class="flex_container>
+                <div class="flex_container>
                     <label for="menu_text">Link to thread:</label>
                     <input type="text" id="menu_text" value="https://boards.4chan.org/h/thread/6662104" >
-                </tr>
-                <tr class="flex_container>
+                </div>
+                <div class="flex_container>
                     <label for="menu_length">Maximum time per image in seconds:</label><br>
                     <input type="text" id="menu_length" value="20" ><br>
-                </tr>
-                <tr class="flex_container>
+                </div>
+                <div class="flex_container>
                     <label for="menu_length">Night Mode:</label><br>
-                    <input type="checkbox" id="night_mode" value="20" ><br>
-                </tr>
+                    <input type="checkbox" id="night_mode" value="nightmode" ><br>
+                </div>
                 <tr class="flex_container>
                     <input type="button" id="menu_submit" value="Start">
                 </tr>
