--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>test</title>
+    <title>Fap Gauntlet Viewer</title>
     <meta name="referrer" content="no-referrer"/>
     <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -14,23 +14,24 @@
     <div class="flex_container visible" id="fgmenu">
         <div class="visible"></div>
         <form id="menu" class="visible">
-            <table>
                 <div class="flex_container>
                     <label for="menu_text">Link to thread:</label>
                     <input type="text" id="menu_text" value="https://boards.4chan.org/h/thread/6662104" >
                 </div>
+                <br>
                 <div class="flex_container>
                     <label for="menu_length">Maximum time per image in seconds:</label><br>
                     <input type="text" id="menu_length" value="20" ><br>
                 </div>
+                <br>
                 <div class="flex_container>
                     <label for="menu_length">Night Mode:</label><br>
                     <input type="checkbox" id="night_mode" value="nightmode" ><br>
                 </div>
+                <br>
                 <tr class="flex_container>
                     <input type="button" id="menu_submit" value="Start">
                 </tr>
-            </table>
         </form>
         <div class="visible"></div>
     </div>  
