--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body> 
     <div class="flex_container visible" id="fgmenu">
         <div class="visible"></div>
-        <form id="menu" class="visible">
+        <div id="menu" class="visible">
                 <div class="flex_container">
                     <label for="menu_text">Link to thread:</label>
                     <input type="text" id="menu_text" value="https://boards.4chan.org/h/thread/6662104" >
@@ -32,7 +32,7 @@
                 <tr class="flex_container">
                     <input type="button" id="menu_submit" value="Start">
                 </tr>
-        </form>
+            </div>
         <div class="visible"></div>
     </div>  
 
