--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
     <div class="flex_container visible" id="fgmenu">
         <div class="visible"></div>
         <div id="menu" class="visible">
-                <div class="flex_container">
+                <div class="">
                     <label for="menu_text">Link to thread:</label>
                     <input type="text" id="menu_text" value="https://boards.4chan.org/h/thread/6662104" >
                 </div>
-                <br>
-                <div class="flex_container">
+                <div class="">
                     <label for="menu_length">Maximum time per image in seconds:</label><br>
                     <input type="text" id="menu_length" value="20" ><br>
                 </div>
-                <br>
-                <div class="flex_container">
+                <div class="">
                     <label for="menu_length">Night Mode:</label><br>
-                    <input type="checkbox" id="night_mode" value="nightmode" ><br>
+                    <input type="checkbox" id="night_mode" value="nightmode" checked><br>
                 </div>
-                <br>
-                <tr class="flex_container">
+                <tr class="">
                     <input type="button" id="menu_submit" value="Start">
                 </tr>
             </div>
