--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
                     <label for="menu_length">Night Mode:</label><br>
                     <input type="checkbox" id="night_mode" value="nightmode" checked><br>
                 </div>
-                <tr class="">
+                <div class="">
+                    <label for="menu_length">Random Order:</label><br>
+                    <input type="checkbox" id="randomize" value="randomize" checked><br>
+                </div>
+                <div class="">
                     <input type="button" id="menu_submit" value="Start">
-                </tr>
+                </div>
             </div>
         <div class="visible"></div>
     </div>  
