--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="">
                     <label for="menu_length">Random Order:</label><br>
-                    <input type="checkbox" id="randomize" value="randomize" checked><br>
+                    <input type="checkbox" id="randomize" value="randomize"><br>
                 </div>
                 <div class="">
                     <input type="button" id="menu_submit" value="Start">
