--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <source id="video_source" src =""/>
         </video>
         <video class="video_player hidden" id="video_preload" autoplay muted>
-            <source id="video_source" src =""/>
+            <source id="video_source_preload" src =""/>
         </video>
-        <img class="display visible" src="" />
-        <img class="preload hidden" src="" />
+        <img class="display visible" id="display" src="" />
+        <img class="preload hidden" id="preload" src="" />
         <canvas id="beatbar">
 
         </canvas>
