--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="flex_container hidden" id="fgmain">
         <div id="text"></div>
-        <video class="video_player hidden" id="video_player" autoplay>
+        <video class="video_player hidden" id="video_player" autoplay loop>
             <source id="video_source" src =""/>
         </video>
         <video class="video_player hidden" id="video_preload" autoplay muted>
