Preparing for pace editing

--- a/index.html
+++ b/index.html
@@ -37,6 +37,31 @@
                 <div class="">
                     <input type="button" id="menu_submit" value="Start">
                 </div>
+                <div class="pace_selector">
+                    <div class="pace_header">
+                        Change bpm
+                        <button id="pace_toggle">
+                            show
+                        </button>
+                    </div>
+                    <div class="pace_body hidden">
+                        <table id = "pace_table">
+                        <tr class = "pace_element">
+                            <td class="pace_name">
+                                <input \>
+                            </td>
+                            <td class="pace_speed">
+                                <input \>
+                            </td>
+                            <td>
+                                <button class="remove_pace">-</button>
+                            </td>
+                        </tr>
+                        </table>
+                        <button id="add_pace">+</button>
+                    </div>
+
+                </div>
             </div>
         <div class="visible"></div>
     </div>  
